used digest to sort triples (first draft)